--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -4,62 +4,49 @@
     </ion-nav-back-button>
 
     <ion-nav-buttons side="left">
-      <img src="../img/icon/menu.png" id="sm-menu-bars" menu-toggle="left">
+      <img src="../img/svg/lines7.svg" id="sm-menu-bars" menu-toggle="left">
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
-    <div class="contanttitles" align="left">
-      <h1 class="contanttitles">Main Coordinators</h1>
-    </div>
-    <div class="contactmininames">
-      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Francesco Vettoretti</h1>
-    </div>
-    <div align="center" class="contactpanel">
-    <a class="yellowbutton contactbutton button" href="tel:+393404201590">+393404201590</a>
-    </div>
-    <div class="contactmininames">
-      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Marco Martini</h1>
-    </div>
-    <div align="center" class="contactpanel">
-      <a class="yellowbutton contactbutton button" href="tel:+393464764333">+393464764333</a>
-    </div>
-    <div class="contanttitles" align="left">
-      <h1 class="contanttitles" style="margin-top: 1vh">Contact Person</h1>
-    </div>
-    <div class="contactmininames">
-      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Anna Tagliabue</h1>
-    </div>
-    <div align="center" class="contactpanel">
-      <a class="bluebutton contactbutton button" href="tel:+393349815707">+393349815707</a>
-    </div>
-    <div class="contactmininames">
-      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Leoni Mendler</h1>
-    </div>
-    <div align="center" class="contactpanel">
-      <a class="bluebutton contactbutton button" href="tel:+393913991605">+393913991605</a>
-    </div>
-    <div class="contactmininames">
-      <h1 style="padding: 0px; margin: 0px; font-size: 4vw">Chiara Fracasso</h1>
-    </div>
-    <div align="center" class="contactpanel">
-      <a class="bluebutton contactbutton button" href="tel:+393332520126">+393332520126</a>
-    </div>
-    <div class="contanttitles" align="left">
-      <h1 class="contanttitles" style="margin-top: 1vh">Emergency</h1>
-    </div>
-    <div align="center" class="contactpanel">
-      <a class="redbutton contactbutton button" href="tel:112">112</a>
-    </div>
+    <div class="list">
 
-    <!--<div class="contacttitles" align="left">
-      <h1 class="contanttitles">Other</h1>
-    </div>
+      <div class="item item-divider">
+        Main Coordinators
+      </div>
 
-    <div align="center" class="contactpanel">
-      <button class="bluebutton contactbutton">118</button>
+      <a class="item item-icon-right" href="tel:+393464764333">
+        Marco Martini<i class="icon ion-ios-telephone-outline"></i>
+      </a>
+      <a class="item item-icon-right" href="tel:+393404201590">
+        Francesco Vettoretti<i class="icon ion-ios-telephone-outline"></i>
+      </a>
+
+      <div class="item item-divider">
+        Contacts & Accomodation
+      </div>
+
+      <a class="item item-icon-right" href="tel:+393349815707">
+        Anna Tagliabue<i class="icon ion-ios-telephone-outline"></i>
+      </a>
+      <a class="item item-icon-right" href="tel:+393332520126">
+        Chiara Fracasso<i class="icon ion-ios-telephone-outline"></i>
+      </a>
+      <a class="item item-icon-right" href="tel:+393913991605">
+        Leoni Mendler<i class="icon ion-ios-telephone-outline"></i>
+      </a>
+
+      <div class="item item-divider">
+        Emergency
+      </div>
+
+      <a class="item item-icon-right" href="tel:112" style="background-color: #2980b9; color: #fff;">
+        <strong>Police</strong><i class="icon ion-ios-telephone-outline"></i>
+      </a>
+
+      <a class="item item-icon-right" href="tel:118" style="background-color: #e74c3c; color: #fff;">
+        <strong>Ambulance</strong><i class="icon ion-ios-telephone-outline"></i>
+      </a>
+
     </div>
-    <div align="center" class="contactpanel">
-      <button class="bluebutton contactbutton">118</button>
-    </div>-->
   </ion-content>
 </ion-view>
