--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,12 +1,11 @@
-<ion-content class="sm-full-height" render-swiper scroll="false">
-  <!--<video autoplay poster="" id="bgvid" loop>
-    &lt;!&ndash; WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  &ndash;&gt;
+<ion-content class="sm-full-height" scroll="false">
+  <video autoplay poster="" id="bgvid" loop>
     <source src="../img/background.mp4" type="video/mp4">
     <source src="../img/background.webm" type="video/webm">
-  </video>-->
+  </video>
   <div class="text-center">
-    <img src="../img/icon/menu.png" id="sm-index-bars" ng-click="toggleLeftSideMenu()">
-    <div ng-click="credits()"><img id="sm-index-credits" class="png" src="../img/icon/info.png"></div>
+    <img src="../img/svg/lines7.svg" id="sm-index-bars" ng-click="toggleLeftSideMenu()">
+    <div ng-click="credits()"><img id="sm-index-credits" class="png" src="../img/svg/snow42.svg"></div>
     <h3 class="title">SNOWDAYS</h3>
     <h5 class="sm-index-subtitle text-center">Europe’s biggest winter sport event for<br>
       students organized by students.<br>
