--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -4,29 +4,29 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left" width="150" render-png>
+  <ion-side-menu side="left" width="170">
     <ion-content scroll="false">
       <ion-list>
         <ion-item menu-close ng-href="#/m" class="sm-list-item">
-          <img src="../img/icon/home.png" class="png">Home
+          <img src="../img/svg/house158.svg" class="svg">Home
         </ion-item>
         <ion-item menu-close href="#/m/schedule" class="sm-list-item">
-          <img src="../img/icon/schedule.png" class="png">Schedule
+          <img src="../img/svg/timetable.svg" class="svg">Schedule
         </ion-item>
         <!--<ion-item menu-close href="#/m/trophy" class="sm-list-item">
           <img src="../img/icon/trophy.png" class="png">Trophy
         </ion-item>-->
         <ion-item menu-close href="#/m/pictures" class="sm-list-item">
-          <img src="../img/icon/pictures.png" class="png">Pictures
+          <img src="../img/svg/mountain35.svg" class="svg">Pictures
         </ion-item>
         <ion-item menu-close href="#/m/videos" class="sm-list-item">
-          <img src="../img/icon/videos.png" class="png">Videos
+          <img src="../img/svg/play111.svg" class="svg">Videos
         </ion-item>
         <ion-item menu-close href="#/m/sponsors" class="sm-list-item">
-          <img src="../img/icon/sponsor.png" class="png">Sponsors
+          <img src="../img/svg/star178.svg" class="svg">Sponsors
         </ion-item>
         <ion-item menu-close href="#/m/contacts" class="sm-list-item">
-          <img src="../img/icon/contacts.png" class="png">Contacts
+          <img src="../img/svg/mail81.svg" class="svg">Contacts
         </ion-item>
       </ion-list>
     </ion-content>
