--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -11,7 +11,7 @@
     <div>
       <ion-slide-box class="schedule" on-slide-changed="slideHasChanged()" does-continue="true" show-pager="false">
         <ion-slide class="firstday">
-          <h1 class="text-center schedule_title">Thursday 3rd</h1>
+          <h1 class="text-center schedule_title" style="font-size: 6vh">Thursday 3rd</h1>
           <h6 class="text-center">You can click on the time for more info!</h6>
 
           <ul class="list">
@@ -90,7 +90,7 @@
 
 
         <ion-slide class="secondday">
-          <h1 class="text-center schedule_title">Friday 4th</h1>
+          <h1 class="text-center schedule_title" style="font-size: 6vh">Friday 4th</h1>
           <h6 class="text-center">You can click on the time for more info!</h6>
 
 
@@ -230,7 +230,7 @@
 
 
         <ion-slide class="thirdday">
-          <h1 class="text-center schedule_title">Saturday 6th</h1>
+          <h1 class="text-center schedule_title" style="font-size: 6vh">Saturday 6th</h1>
           <h6 class="text-center">You can click on the time for more info!</h6>
 
           <ul class="list">
