--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -10,32 +10,32 @@
   <ion-content>
     <div class="list">
 
-      <div class="item item-divider">
+      <div class="item item-divider" style="background-image: url('../img/bluenumber.png'); font-size: 5vw ">
         Main Coordinators
       </div>
 
-      <a class="item item-icon-right" href="tel:+393464764333">
+      <a class="item item-icon-right" href="tel:+393464764333" style="font-size: 4.5vw">
         Marco Martini<i class="icon ion-ios-telephone-outline"></i>
       </a>
-      <a class="item item-icon-right" href="tel:+393404201590">
+      <a class="item item-icon-right" href="tel:+393404201590" style="font-size: 4.5vw">
         Francesco Vettoretti<i class="icon ion-ios-telephone-outline"></i>
       </a>
 
-      <div class="item item-divider">
+      <div class="item item-divider" style="background-image: url('../img/yellownumber.png'); font-size: 5vw ">
         Contacts & Accomodation
       </div>
 
-      <a class="item item-icon-right" href="tel:+393349815707">
+      <a class="item item-icon-right" href="tel:+393349815707" style="font-size: 4.5vw">
         Anna Tagliabue<i class="icon ion-ios-telephone-outline"></i>
       </a>
-      <a class="item item-icon-right" href="tel:+393332520126">
+      <a class="item item-icon-right" href="tel:+393332520126" style="font-size: 4.5vw">
         Chiara Fracasso<i class="icon ion-ios-telephone-outline"></i>
       </a>
-      <a class="item item-icon-right" href="tel:+393913991605">
+      <a class="item item-icon-right" href="tel:+393913991605" style="font-size: 4.5vw">
         Leoni Mendler<i class="icon ion-ios-telephone-outline"></i>
       </a>
 
-      <div class="item item-divider">
+      <div class="item item-divider" style="font-size: 5vw">
         Emergency
       </div>
 
