--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,8 +1,8 @@
 <ion-content class="sm-full-height" scroll="false">
-  <video autoplay poster="" id="bgvid" loop>
+  <!--<video autoplay poster="" id="bgvid" loop>
     <source src="../img/background.mp4" type="video/mp4">
     <source src="../img/background.webm" type="video/webm">
-  </video>
+  </video>-->
   <div class="text-center">
     <img src="../img/svg/lines7.svg" id="sm-index-bars" ng-click="toggleLeftSideMenu()">
     <div ng-click="credits()"><img id="sm-index-credits" class="png" src="../img/svg/snow42.svg"></div>
