--- a/www/templates/schedule.html
+++ b/www/templates/schedule.html
@@ -11,77 +11,77 @@
     <div>
       <ion-slide-box class="schedule" on-slide-changed="slideHasChanged()" does-continue="true" show-pager="false">
         <ion-slide class="firstday">
-          <h1 class="text-center schedule_title" style="font-size: 6vh">Thursday 3rd</h1>
+          <h1 class="text-center schedule_title">Thursday 3rd</h1>
           <h6 class="text-center">You can click on the time for more info!</h6>
 
           <ul class="list">
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>09.00 - 17.00</strong>
+                  <h1 class="leftside">09.00 - 17.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Check-in</p>
+                  <h1 class="rightside">Check-in</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>17.00 - 18.30</strong>
+                  <h1 class="leftside">17.00 - 18.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Dinner</p>
+                  <h1 class="rightside">Dinner</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>18.00 - 19.30</strong>
+                  <h1 class="leftside">18.00 - 19.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Bus leave from BZ</p>
+                  <h1 class="rightside">Bus leave from BZ</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>19.00 - 21.30</strong>
+                  <h1 class="leftside">19.00 - 21.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Skiing</p>
+                  <h1 class="rightside">Skiing</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>21.40 - 22.20</strong>
+                  <h1 class="leftside">21.40 - 22.20</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Bus departure</p>
+                  <h1 class="rightside">Bus departure</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>22.30 - 03.00</strong>
+                  <h1 class="leftside">22.30 - 03.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>FLUO Party</p>
+                  <h1 class="rightside">FLUO Party</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>23.30 - 02.00</strong>
+                  <h1 class="leftside">23.30 - 02.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Opening Ceremony</p>
+                  <h1 class="rightside">Opening Ceremony</h1>
                 </div>
               </div>
             </li>
@@ -90,7 +90,7 @@
 
 
         <ion-slide class="secondday">
-          <h1 class="text-center schedule_title" style="font-size: 6vh">Friday 4th</h1>
+          <h1 class="text-center schedule_title">Friday 4th</h1>
           <h6 class="text-center">You can click on the time for more info!</h6>
 
 
@@ -98,130 +98,130 @@
             <li class="item" ng-click="showExtraInfotwo(201)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>07.00 - 09.00</strong>
+                  <h1 class="leftside">07.00 - 09.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Breakfast</p>
+                  <h1 class="rightside">Breakfast</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(202)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>08.00 - 09.30</strong>
+                  <h1 class="leftside">08.00 - 09.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Bus leave from Bolzano</p>
+                  <h1 class="rightside">Bus leave from Bolzano</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(203)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>10.00 - 17.15</strong>
+                  <h1 class="leftside">10.00 - 17.15</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Ski and Snowboarding</p>
+                  <h1 class="rightside">Ski and Snowboarding</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(2051)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>10.00 - 12.00</strong>
+                  <h1 class="leftside">10.00 - 12.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Ski Course for Beginners</p>
+                  <h1 class="rightside">Ski Course for Beginners</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(204)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>10.30 - 11.30</strong>
+                  <h1 class="leftside">10.30 - 11.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Salewa Ski Race</p>
+                  <h1 class="rightside">Salewa Ski Race</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(205)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>11.00 - 12.00</strong>
+                  <h1 class="leftside">11.00 - 12.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Snowshoeing Group 1</p>
+                  <h1 class="rightside">Snowshoeing Group 1</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(206)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>12.00 - 14.00</strong>
+                  <h1 class="leftside">12.00 - 14.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Lunch</p>
+                  <h1 class="rightside">Lunch</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(207)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>12.30 – 14.30</strong>
+                  <h1 class="leftside">12.30 – 14.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Paragliding Show</p>
+                  <h1 class="rightside">Paragliding Show</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(208)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>13.30 - 14.30</strong>
+                  <h1 class="leftside">13.30 - 14.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Snowshoeing Group 2</p>
+                  <h1 class="rightside">Snowshoeing Group 2</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(209)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>15.00 - 16.00</strong>
+                  <h1 class="leftside">15.00 - 16.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Snack Break</p>
+                  <h1 class="rightside">Snack Break</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(2010)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>15.45 - 17.15</strong>
+                  <h1 class="leftside">15.45 - 17.15</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Bus leave from Ultental</p>
+                  <h1 class="rightside">Bus leave from Ultental</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(2011)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>18.30 - 20.00</strong>
+                  <h1 class="leftside">18.30 - 20.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Dinner</p>
+                  <h1 class="rightside">Dinner</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfotwo(2012)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>22.00 - 02.30</strong>
+                  <h1 class="leftside">22.00 - 02.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>TOGA PARTY!</p>
+                  <h1 class="rightside">TOGA PARTY!</h1>
                 </div>
               </div>
             </li>
@@ -230,147 +230,147 @@
 
 
         <ion-slide class="thirdday">
-          <h1 class="text-center schedule_title" style="font-size: 6vh">Saturday 6th</h1>
+          <h1 class="text-center schedule_title">Saturday 6th</h1>
           <h6 class="text-center">You can click on the time for more info!</h6>
 
           <ul class="list">
             <li class="item" ng-click="showExtraInfothree(301)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>08.00 - 09.30</strong>
+                  <h1 class="leftside">08.00 - 09.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Breakfast</p>
+                  <h1 class="rightside">Breakfast</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(302)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>09.30 - 11.00</strong>
+                  <h1 class="leftside">09.30 - 11.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Bus leave from Bolzano</p>
+                  <h1 class="rightside">Bus leave from Bolzano</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(303)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>11.30 - 13.30</strong>
+                  <h1 class="leftside">11.30 - 13.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Lunch</p>
+                  <h1 class="rightside">Lunch</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(304)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>13.00 - 17.00</strong>
+                  <h1 class="leftside">13.00 - 17.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Tournaments</p>
+                  <h1 class="rightside">Tournaments</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(305)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>14.00 - 19.00</strong>
+                  <h1 class="leftside">14.00 - 19.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Swimming Pool</p>
+                  <h1 class="rightside">Swimming Pool</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(306)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>14.00 - 15.00</strong>
+                  <h1 class="leftside">14.00 - 15.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>RedBull Riding</p>
+                  <h1 class="rightside">RedBull Riding</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(307)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>15.00 - 16.00</strong>
+                  <h1 class="leftside">15.00 - 16.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Salewa Table Boulder</p>
+                  <h1 class="rightside">Salewa Table Boulder</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(308)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>16.00 - 17.00</strong>
+                  <h1 class="leftside">16.00 - 17.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Snack Break</p>
+                  <h1 class="rightside">Snack Break</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(309)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>17.00 - 20.00</strong>
+                  <h1 class="leftside">17.00 - 20.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Shower Time</p>
+                  <h1 class="rightside">Shower Time</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(3010)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>18.30 - 20.00</strong>
+                  <h1 class="leftside">18.30 - 20.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Chill Out</p>
+                  <h1 class="rightside">Chill Out</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(3011)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>20.30 - 22.30</strong>
+                  <h1 class="leftside">20.30 - 22.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Dinner</p>
+                  <h1 class="rightside">Dinner</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(3012)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>22.30 - 23.30</strong>
+                  <h1 class="leftside">22.30 - 23.30</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Awards and Final Ceremony</p>
+                  <h1 class="rightside">Awards and Final Ceremony</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(3013)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>23.30 - 04.00</strong>
+                  <h1 class="leftside">23.30 - 04.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>PYJAMA PARTY!</p>
+                  <h1 class="rightside">PYJAMA PARTY!</h1>
                 </div>
               </div>
             </li>
             <li class="item" ng-click="showExtraInfothree(3014)">
               <div class="row">
                 <div class="col-md-4 text-left">
-                  <strong>01.00 - 04.00</strong>
+                  <h1 class="leftside">01.00 - 04.00</h1>
                 </div>
                 <div class="col-md-8 text-right">
-                  <p>Bus leave from Canazei</p>
+                  <h1 class="rightside">Bus leave from Canazei</h1>
                 </div>
               </div>
             </li>
