--- a/www/templates/sponsors.html
+++ b/www/templates/sponsors.html
@@ -4,38 +4,89 @@
     </ion-nav-back-button>
 
     <ion-nav-buttons side="left">
-      <img src="../img/icon/menu.png" id="sm-menu-bars" menu-toggle="left">
+      <img src="../img/svg/lines7.svg" id="sm-menu-bars" menu-toggle="left">
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content>
   <div >
+
+
     <div class="sponsor item" style="background-color: aquamarine; border-width: 0.7vh; border-style: solid">
       <h1 class="sponsortitle">Platinum Sponsors</h1>
-      <a target="_blank" href="http://http://marlene.it">
-        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/marlene.png">
-      </a>
-      <a target="_blank" href="http://">
-        <img class="sponsorimg" src="">
-      </a>
+      <div>
+        <a target="_blank" href="http://lifeshot.eu">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/lifeshot.png">
+        </a>
+        <a target="_blank" href="http://www.salewa.com/en/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/salewa.png">
+        </a>
+      </div>
+      <div>
+        <a target="_blank" href="http://alpenstoff.de/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/alpenstoff.svg">
+        </a>
+        <a target="_blank" href="http://www.bionade.de/en/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/bionade.png">
+        </a>
+      </div>
+
     </div>
+
+
 
     <div class="sponsor item" style="background-color: gold">
       <h1 class="sponsortitle">Gold Sponsors</h1>
-      <h1>Alpenstoff</h1>
-      <a target="_blank" href="http://lifeshot.eu">
-        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/lifeshot.png">
-      </a>
+      <div>
+        <a target="_blank" href="http://http://marlene.it">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/marlene.png">
+        </a>
+        <a target="_blank" href="http://woodmate.it/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/woodmate.png">
+        </a>
+      </div>
+      <div>
+        <a target="_blank" href="http://www.senfter.it/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/senfter.png">
+        </a>
+      </div>
     </div>
+
+
     <div class="sponsor item" style="background-color: silver">
       <h1 class="sponsortitle">Silver Sponsors</h1>
-
+      <div>
+        <a target="_blank" href="http://pompadour.it/it/home/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/pompadour.png">
+        </a>
+        <a target="_blank" href="http://pejo.it/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/pejo.png">
+        </a>
+      </div>
+      <div>
+        <a target="_blank" href="http://www.capone-food.com/http://www.capone-food.com/">
+        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/capone.png">
+      </a>
+      </div>
     </div>
+
+
     <div class="sponsor item" style="background-color: sandybrown">
       <h1 class="sponsortitle">Bronze Sponsors</h1>
-      <h1>Heineken</h1>
-      <a target="_blank" href="http://lifeshot.eu">
-        <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/reboot2.png">
-      </a>
+      <div>
+        <a target="_blank" href="http://lifeshot.eu">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/reboot.png">
+        </a>
+        <a target="_blank" href="http://loacker.com/int/en/">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/loacker.png">
+        </a>
+      </div>
+      <div>
+        <a target="_blank" href="http://www.franziskanerbaeckerei.it/it/cms/1.htm">
+          <img class="sponsorimg" src="https://dl.dropboxusercontent.com/u/107006905/franziskanerbaeckerei.jpg">
+        </a>
+        <!-- one more here remember! -->
+      </div>
+
     </div>
   </div>
   </ion-content>
