--- a/www/templates/videos.html
+++ b/www/templates/videos.html
@@ -5,7 +5,7 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <img src="../img/icon/menu.png" id="sm-menu-bars" menu-toggle="left">
+        <img src="../img/svg/lines7.svg" id="sm-menu-bars" menu-toggle="left">
       </ion-nav-buttons>
     </ion-nav-bar>
 
